<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tracking">

    <fragment
        android:id="@+id/navigation_tracking"
        android:name="com.FreeWheel.biketracker.ui.tracking.TrackingFragment"
        android:label="@string/title_tracking"
        tools:layout="@layout/fragment_tracking" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.FreeWheel.biketracker.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.FreeWheel.biketracker.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.FreeWheel.biketracker.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>